--- a/frontend-react/src/index.css
+++ b/frontend-react/src/index.css
@@ -4,9 +4,17 @@ background-color: white;
   background-repeat: no-repeat;
   background-position: center;
   background-attachment: fixed;
-  min-height: 100vh;
+  min-height: 100;
   margin: 0;
   font-family: sans-serif;
-
   position: relative;
+}
+
+.contenido-principal {
+  margin-top: 12vh;
+}
+
+.nav-text{
+  background-color: pink;
+  color: black;
 }
